fixed background not stretching to sides

--- a/src/App.css
+++ b/src/App.css
@@ -584,7 +584,7 @@ Media queries
     display: flex;
     flex-direction: column;
     padding: 0 24px;
-    width: 90%;
+    width: 100%;
   }
   .landing__header--top {
     font-size: 40px;
